# twilio-rs

./: Cargo.toml
examples/: basic_sms.rs  content_template.rs  customer_service_bot.rs  multilingual.rs  webhook.rs  whatsapp_business_flow.rs  whatsapp_ecommerce.rs  whatsapp_interactive.rs  whatsapp_media.rs  whatsapp_payments.rs  whatsapp_reminders.rs  whatsapp_text.rs
src/: client.rs  lib.rs  payments.rs  signature.rs  sms.rs  webhook.rs  whatsapp.rs
