[package]
name = "twilio_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = [
    "json",
    "multipart",
    "blocking",
    "gzip",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
urlencoding = "2.1"
base64 = "0.21"
actix-web = "4"
hmac = "0.12.1"
sha1 = "0.10.6"
qrcode = "0.14.1"
[[example]]
name = "webhook"
path = "examples/webhook.rs"

[[example]]
name = "basic_sms"
path = "examples/basic_sms.rs"

[[example]]
name = "whatsapp_media"
path = "examples/webhook.rs"

[[example]]
name = "whatsapp_text"
path = "examples/whatsapp_text.rs"

[[example]]
name = "customer_service"
path = "examples/customer_service_bot.rs"

[[example]]
name = "ecommerce"
path = "examples/whatsapp_ecommerce.rs"
[[example]]
name = "interactive"
path = "examples/whatsapp_interactive.rs"

[[example]]
name = "payments"
path = "examples/whatsapp_payments.rs"

[[example]]
name = "reminders"
path = "examples/whatsapp_reminders.rs"
[[example]]
name = "multilingual"
path = "examples/multilingual.rs"

[[example]]
name = "content_template"
path = "examples/content_template.rs"
